terraform/aws/analytical-platform-data-production/airflow/launch-templates.tf
resource "aws_launch_template" "dev_standard" {
  name          = "dev_standard"
  image_id      = "ami-0246ad1c10bc9a7ab"
  instance_type = "t3a.large"

  disable_api_stop        = false
  disable_api_termination = false

  security_group_names = []

  user_data = "TUlNRS1WZXJzaW9uOiAxLjAKQ29udGVudC1UeXBlOiBtdWx0aXBhcnQvbWl4ZWQ7IGJvdW5kYXJ5PSIvLyIKCi0tLy8KQ29udGVudC1UeXBlOiB0ZXh0L3gtc2hlbGxzY3JpcHQ7IGNoYXJzZXQ9InVzLWFzY2lpIgojIS9iaW4vYmFzaApzZXQgLWV4CkI2NF9DTFVTVEVSX0NBPUxTMHRMUzFDUlVkSlRpQkRSVkpVU1VaSlEwRlVSUzB0TFMwdENrMUpTVU0xZWtORFFXTXJaMEYzU1VKQlowbENRVVJCVGtKbmEzRm9hMmxIT1hjd1FrRlJjMFpCUkVGV1RWSk5kMFZSV1VSV1VWRkVSWGR3Y21SWFNtd0tZMjAxYkdSSFZucE5RalJZUkZSSmVVMUVUWGxOYWtVMFRrUlJlRTR4YjFoRVZFMTVUVVJOZUU5VVJUUk9SRkY0VGpGdmQwWlVSVlJOUWtWSFFUR [...]

  block_device_mappings {
    device_name = "/dev/xvda"
    ebs {
      delete_on_termination = "true"
      iops                  = 3000
      throughput            = 250
      volume_size           = 150
      volume_type           = "gp3"
    }
  }

  metadata_options {
    http_put_response_hop_limit = 2
    http_tokens                 = "optional"
  }

  network_interfaces {
    device_index       = 0
    ipv4_address_count = 0
    ipv4_addresses     = []
    ipv4_prefix_count  = 0
    ipv4_prefixes      = []
    ipv6_address_count = 0
    ipv6_addresses     = []
    ipv6_prefix_count  = 0
    ipv6_prefixes      = []
    network_card_index = 0
    security_groups = [
      "sg-089008308707d83b7"
    ]
  }

  tags = {
    "eks:cluster-name"                                       = "airflow-dev"
    "eks:nodegroup-name"                                     = "standard"
    "k8s.io/cluster-autoscaler/node-template/label/standard" = "true"
    "k8s.io/cluster-autoscaler/node-template/taint/standard" = "true:NoSchedule"
  }
}

resource "aws_launch_template" "dev_high_memory" {
  name          = "dev_high_memory"
  image_id      = "ami-064e6ccd9f6d74534"
  instance_type = "r6i.8xlarge"

  disable_api_stop        = false
  disable_api_termination = false

  security_group_names = []

  user_data = "TUlNRS1WZXJzaW9uOiAxLjAKQ29udGVudC1UeXBlOiBtdWx0aXBhcnQvbWl4ZWQ7IGJvdW5kYXJ5PSIvLyIKCi0tLy8KQ29udGVudC1UeXBlOiB0ZXh0L3gtc2hlbGxzY3JpcHQ7IGNoYXJzZXQ9InVzLWFzY2lpIgojIS9iaW4vYmFzaApzZXQgLWV4CkI2NF9DTFVTVEVSX0NBPUxTMHRMUzFDUlVkSlRpQkRSVkpVU1VaSlEwRlVSUzB0TFMwdENrMUpTVU0xZWtORFFXTXJaMEYzU1VKQlowbENRVVJCVGtKbmEzRm9hMmxIT1hjd1FrRlJjMFpCUkVGV1RWSk5kMFZSV1VSV1VWRkVSWGR3Y21SWFNtd0tZMjAxYkdSSFZucE5RalJZUkZSSmVVMUVUWGxOYWtVMFRrUlJlRTR4YjFoRVZFMTVUVVJOZUU5VVJUUk9SRkY0VGpGdmQwWlVSVlJOUWtWSFFUR [...]

  block_device_mappings {
    device_name = "/dev/xvda"
    ebs {
      delete_on_termination = "true"
      iops                  = 3000
      throughput            = 250
      volume_size           = 200
      volume_type           = "gp3"
    }
  }

  metadata_options {
    http_put_response_hop_limit = 2
    http_tokens                 = "optional"
  }

  network_interfaces {
    device_index       = 0
    ipv4_address_count = 0
    ipv4_addresses     = []
    ipv4_prefix_count  = 0
    ipv4_prefixes      = []
    ipv6_address_count = 0
    ipv6_addresses     = []
    ipv6_prefix_count  = 0
    ipv6_prefixes      = []
    network_card_index = 0
    security_groups = [
      "sg-089008308707d83b7"
    ]
  }

  tags = {
    "eks:cluster-name"                                          = "airflow-dev"
    "eks:nodegroup-name"                                        = "high-memory"
    "k8s.io/cluster-autoscaler/node-template/label/high-memory" = "true"
    "k8s.io/cluster-autoscaler/node-template/taint/high-memory" = "true:NoSchedule"
  }
}

resource "aws_launch_template" "prod_standard" {
  name          = "prod_standard"
  image_id      = "ami-0246ad1c10bc9a7ab"
  instance_type = "t3a.large"

  disable_api_stop        = false
  disable_api_termination = false

  security_group_names = []

  user_data = "TUlNRS1WZXJzaW9uOiAxLjAKQ29udGVudC1UeXBlOiBtdWx0aXBhcnQvbWl4ZWQ7IGJvdW5kYXJ5PSIvLyIKCi0tLy8KQ29udGVudC1UeXBlOiB0ZXh0L3gtc2hlbGxzY3JpcHQ7IGNoYXJzZXQ9InVzLWFzY2lpIgojIS9iaW4vYmFzaApzZXQgLWV4CkI2NF9DTFVTVEVSX0NBPUxTMHRMUzFDUlVkSlRpQkRSVkpVU1VaSlEwRlVSUzB0TFMwdENrMUpTVU0xZWtORFFXTXJaMEYzU1VKQlowbENRVVJCVGtKbmEzRm9hMmxIT1hjd1FrRlJjMFpCUkVGV1RWSk5kMFZSV1VSV1VWRkVSWGR3Y21SWFNtd0tZMjAxYkdSSFZucE5RalJZUkZSSmVVMUVUWGxOVkVVelRYcEJlVTVXYjFoRVZFMTVUVVJOZUU5RVJUTk5la0Y1VGxadmQwWlVSVlJOUWtWSFFUR [...]

  block_device_mappings {
    device_name = "/dev/xvda"
    ebs {
      delete_on_termination = "true"
      iops                  = 3000
      throughput            = 250
      volume_size           = 150
      volume_type           = "gp3"
    }
  }

  metadata_options {
    http_put_response_hop_limit = 2
    http_tokens                 = "required"
  }

  network_interfaces {
    device_index       = 0
    ipv4_address_count = 0
    ipv4_addresses     = []
    ipv4_prefix_count  = 0
    ipv4_prefixes      = []
    ipv6_address_count = 0
    ipv6_addresses     = []
    ipv6_prefix_count  = 0
    ipv6_prefixes      = []
    network_card_index = 0
    security_groups = [
      "sg-0d3d0f70f95dc133f"
    ]
  }

  tags = {
    "eks:cluster-name"                                       = "airflow-prod"
    "eks:nodegroup-name"                                     = "standard"
    "k8s.io/cluster-autoscaler/node-template/label/standard" = "true"
    "k8s.io/cluster-autoscaler/node-template/taint/standard" = "true:NoSchedule"
  }
}

resource "aws_launch_template" "prod_high_memory" {
  name          = "prod_high_memory"
  image_id      = "ami-0246ad1c10bc9a7ab"
  instance_type = "r6i.8xlarge"

  disable_api_stop        = false
  disable_api_termination = false

  security_group_names = []

  user_data = "TUlNRS1WZXJzaW9uOiAxLjAKQ29udGVudC1UeXBlOiBtdWx0aXBhcnQvbWl4ZWQ7IGJvdW5kYXJ5PSIvLyIKCi0tLy8KQ29udGVudC1UeXBlOiB0ZXh0L3gtc2hlbGxzY3JpcHQ7IGNoYXJzZXQ9InVzLWFzY2lpIgojIS9iaW4vYmFzaApzZXQgLWV4CkI2NF9DTFVTVEVSX0NBPUxTMHRMUzFDUlVkSlRpQkRSVkpVU1VaSlEwRlVSUzB0TFMwdENrMUpTVU0xZWtORFFXTXJaMEYzU1VKQlowbENRVVJCVGtKbmEzRm9hMmxIT1hjd1FrRlJjMFpCUkVGV1RWSk5kMFZSV1VSV1VWRkVSWGR3Y21SWFNtd0tZMjAxYkdSSFZucE5RalJZUkZSSmVVMUVUWGxOVkVVelRYcEJlVTVXYjFoRVZFMTVUVVJOZUU5RVJUTk5la0Y1VGxadmQwWlVSVlJOUWtWSFFUR [...]

  block_device_mappings {
    device_name = "/dev/xvda"
    ebs {
      delete_on_termination = "true"
      iops                  = 3000
      throughput            = 250
      volume_size           = 200
      volume_type           = "gp3"
    }
  }

  metadata_options {
    http_put_response_hop_limit = 2
    http_tokens                 = "required"
  }

  network_interfaces {
    device_index       = 0
    ipv4_address_count = 0
    ipv4_addresses     = []
    ipv4_prefix_count  = 0
    ipv4_prefixes      = []
    ipv6_address_count = 0
    ipv6_addresses     = []
    ipv6_prefix_count  = 0
    ipv6_prefixes      = []
    network_card_index = 0
    security_groups = [
      "sg-0d3d0f70f95dc133f"
    ]
  }

  tags = {
    "eks:cluster-name"                                          = "airflow-prod"
    "eks:nodegroup-name"                                        = "high-memory"
    "k8s.io/cluster-autoscaler/node-template/label/high-memory" = "true"
    "k8s.io/cluster-autoscaler/node-template/taint/high-memory" = "true:NoSchedule"
  }
}
